--- a/1-aws-fundamentals/s3.md
+++ b/1-aws-fundamentals/s3.md
@@ -1,6 +1,6 @@
 # S3 Buckets
 
-* Amazon S3 allows people to store objects (files) fun “buckets” (directories)
+* Amazon S3 allows people to store objects (files) in “buckets” (directories)
 * Buckets must have a globally unique name
     * Naming convention:
         * No uppercase
@@ -90,9 +90,9 @@
 #### S3 Websites
 * S3 can host static website sand have them accessible on the world wide web
 * The website URL will be:
-    * <bucket-name>.s3-website-<Atws-region>.amazonatws.com
+    * http://**bucket-name**.s3-website-**Atws-region**.amazonatws.com
     * OR
-    * <bucket-name>.s3-website.<Atws-region>.amazonatws.com
+    * http://**bucket-name**.s3-website.**Atws-region**.amazonatws.com
 * If you get a 403 (forbidden) error, make sure the bucket policy allows public reads!
 * 
 
